[package]
name = "mypass"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
eframe = { version = "0.22", features = ["persistence"] }
env_logger = "0.10"
keepass = { version = "0.6", git = "https://github.com/ssrlive/keepass-rs.git", branch = "refactor" }
log = "0.4"
rfd = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
