[package]
name = "mypass"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
eframe = { version = "0.31", features = ["persistence"] }
env_logger = "0.11"
keepass-ng = { version = "0.10", features = [
    "utilities",
    "save_kdbx4",
    "challenge_response",
    "merge",
] }
log = "0.4"
rfd = { version = "0.15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[dev-dependencies]
