[package]
name = "mypass"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
dotenvy = "0.15.7"
eframe = { version = "0.32.2", features = ["persistence"] }
env_logger = "0.11.8"
keepass-ng = { version = "0.10.5", features = [
    "utilities",
    "save_kdbx4",
    "challenge_response",
    "merge",
] }
log = "0.4.28"
rfd = { version = "0.15.4" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"

[dev-dependencies]
